--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -701,247 +701,6 @@
     }
   }
 
-  .bui-MenuPopover {
-    border: 1px solid var(--bui-border);
-    border-radius: var(--bui-radius-2);
-    background: var(--bui-bg-surface-1);
-    color: var(--bui-fg-primary);
-    outline: none;
-    flex-direction: column;
-    min-height: 0;
-    transition: transform .2s, opacity .2s;
-    display: flex;
-    overflow: hidden;
-
-    &[data-entering], &[data-exiting] {
-      transform: var(--origin);
-      opacity: 0;
-    }
-
-    &[data-placement="top"] {
-      --origin: translateY(8px);
-    }
-
-    &[data-placement="bottom"] {
-      --origin: translateY(-8px);
-    }
-
-    &[data-placement="right"] {
-      --origin: translateX(-8px);
-    }
-
-    &[data-placement="left"] {
-      --origin: translateX(8px);
-    }
-  }
-
-  .bui-MenuContent {
-    max-height: inherit;
-    box-sizing: border-box;
-    padding: var(--bui-space-1);
-    outline: none;
-    min-width: 150px;
-    overflow: auto;
-  }
-
-  .bui-MenuPopover .bui-ScrollAreaRoot {
-    flex-direction: column;
-    flex: 1;
-    height: 100%;
-    min-height: 0;
-    display: flex;
-  }
-
-  .bui-MenuPopover .bui-ScrollAreaScrollbar {
-    margin-inline: var(--bui-space-1_5);
-  }
-
-  .bui-MenuItem {
-    height: 2rem;
-    padding-inline: var(--bui-space-2);
-    border-radius: var(--bui-radius-2);
-    cursor: default;
-    color: var(--bui-fg-primary);
-    font-size: var(--bui-font-size-3);
-    justify-content: space-between;
-    align-items: center;
-    gap: var(--bui-space-6);
-    outline: none;
-    display: flex;
-
-    &[data-focused], &[data-open] {
-      background: var(--bui-bg-surface-2);
-      color: var(--bui-fg-primary);
-    }
-
-    &[data-color="danger"] {
-      color: var(--bui-fg-danger);
-    }
-
-    &[data-color="danger"][data-focused] {
-      background: var(--bui-bg-danger);
-      color: var(--bui-fg-danger);
-    }
-
-    &[data-has-submenu] {
-      & > .bui-MenuItemArrow {
-        display: block;
-      }
-    }
-  }
-
-  .bui-MenuItemListBox {
-    height: 2rem;
-    padding-inline: var(--bui-space-2);
-    border-radius: var(--bui-radius-2);
-    cursor: default;
-    color: var(--bui-fg-primary);
-    font-size: var(--bui-font-size-3);
-    justify-content: space-between;
-    align-items: center;
-    gap: var(--bui-space-6);
-    outline: none;
-    display: flex;
-
-    &:hover {
-      background: var(--bui-bg-surface-2);
-      color: var(--bui-fg-primary);
-    }
-
-    &[data-selected] .bui-MenuItemListBoxCheck {
-      & > svg {
-        opacity: 1;
-        color: var(--bui-fg-primary);
-      }
-    }
-  }
-
-  .bui-MenuItemListBoxCheck {
-    justify-content: center;
-    align-items: center;
-    width: 1rem;
-    height: 1rem;
-    display: flex;
-
-    & > svg {
-      opacity: 0;
-      width: 1rem;
-      height: 1rem;
-    }
-  }
-
-  .bui-MenuItemContent {
-    align-items: center;
-    gap: var(--bui-space-2);
-    display: flex;
-
-    & > svg {
-      width: 1rem;
-      height: 1rem;
-    }
-  }
-
-  .bui-MenuItemArrow {
-    width: 1rem;
-    height: 1rem;
-    display: none;
-
-    & > svg {
-      width: 1rem;
-      height: 1rem;
-    }
-  }
-
-  .bui-MenuSection {
-    &:first-child .bui-MenuSectionHeader {
-      padding-top: 0;
-    }
-  }
-
-  .bui-MenuSectionHeader {
-    height: 2rem;
-    padding-top: var(--bui-space-3);
-    padding-left: var(--bui-space-2);
-    color: var(--bui-fg-primary);
-    font-size: var(--bui-font-size-1);
-    letter-spacing: .05rem;
-    text-transform: uppercase;
-    align-items: center;
-    font-weight: bold;
-    display: flex;
-  }
-
-  .bui-MenuSeparator {
-    background: var(--bui-border);
-    height: 1px;
-    margin-inline: var(--bui-space-1_5);
-    margin-block: var(--bui-space-1);
-  }
-
-  .bui-MenuSearchField {
-    font-family: var(--bui-font-regular);
-    flex-shrink: 0;
-    width: 100%;
-    position: relative;
-
-    &[data-empty] {
-      & .bui-MenuSearchFieldClear {
-        display: none;
-      }
-    }
-  }
-
-  .bui-MenuSearchFieldInput {
-    padding: 0 var(--bui-space-3);
-    border: none;
-    border-bottom: 1px solid var(--bui-border);
-    background-color: var(--bui-bg-surface-1);
-    font-size: var(--bui-font-size-3);
-    font-family: var(--bui-font-regular);
-    font-weight: var(--bui-font-weight-regular);
-    color: var(--bui-fg-primary);
-    width: 100%;
-    height: 2rem;
-    cursor: inherit;
-    outline: none;
-    align-items: center;
-    display: flex;
-
-    &::-webkit-search-cancel-button, &::-webkit-search-decoration {
-      -webkit-appearance: none;
-    }
-  }
-
-  .bui-MenuSearchFieldClear {
-    right: var(--bui-space-2);
-    cursor: pointer;
-    color: var(--bui-fg-secondary);
-    background-color: #0000;
-    border: none;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    transition: color .2s ease-in-out;
-    display: flex;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-
-    & > svg {
-      width: 1rem;
-      height: 1rem;
-    }
-  }
-
-  .bui-MenuEmptyState {
-    padding: var(--bui-space-1);
-    color: var(--bui-fg-secondary);
-    font-size: var(--bui-font-size-3);
-    font-family: var(--bui-font-regular);
-    font-weight: var(--bui-font-weight-regular);
-  }
-
   .bui-Popover {
     background-color: var(--bui-bg-surface-1);
     border: 1px solid var(--bui-border);
@@ -11078,3 +10837,241 @@
 }
 
 @layer legacy;
+
+.bui-MenuPopover {
+  border: 1px solid var(--bui-border);
+  border-radius: var(--bui-radius-2);
+  background: var(--bui-bg-surface-1);
+  color: var(--bui-fg-primary);
+  outline: none;
+  flex-direction: column;
+  min-height: 0;
+  transition: transform .2s, opacity .2s;
+  display: flex;
+  overflow: hidden;
+
+  &[data-entering], &[data-exiting] {
+    transform: var(--origin);
+    opacity: 0;
+  }
+
+  &[data-placement="top"] {
+    --origin: translateY(8px);
+  }
+
+  &[data-placement="bottom"] {
+    --origin: translateY(-8px);
+  }
+
+  &[data-placement="right"] {
+    --origin: translateX(-8px);
+  }
+
+  &[data-placement="left"] {
+    --origin: translateX(8px);
+  }
+}
+
+.bui-MenuContent {
+  max-height: inherit;
+  box-sizing: border-box;
+  min-width: 150px;
+  padding-block: var(--bui-space-1);
+  outline: none;
+  overflow: auto;
+}
+
+.bui-MenuPopover .bui-ScrollAreaRoot {
+  flex-direction: column;
+  flex: 1;
+  height: 100%;
+  min-height: 0;
+  display: flex;
+}
+
+.bui-MenuPopover .bui-ScrollAreaScrollbar {
+  margin-inline: var(--bui-space-1_5);
+}
+
+.bui-MenuItem {
+  padding-inline: var(--bui-space-1);
+  display: block;
+
+  &[data-focused] .bui-MenuItemWrapper, &[data-open] .bui-MenuItemWrapper {
+    background: var(--bui-bg-surface-2);
+    color: var(--bui-fg-primary);
+  }
+
+  &[data-color="danger"] .bui-MenuItemWrapper {
+    color: var(--bui-fg-danger);
+  }
+
+  &[data-color="danger"][data-focused] .bui-MenuItemWrapper {
+    background: var(--bui-bg-danger);
+    color: var(--bui-fg-danger);
+  }
+
+  &[data-has-submenu] {
+    & > .bui-MenuItemWrapper > .bui-MenuItemArrow {
+      display: block;
+    }
+  }
+}
+
+.bui-MenuItemWrapper {
+  height: 2rem;
+  padding-inline: var(--bui-space-2);
+  border-radius: var(--bui-radius-2);
+  cursor: default;
+  color: var(--bui-fg-primary);
+  font-size: var(--bui-font-size-3);
+  justify-content: space-between;
+  align-items: center;
+  gap: var(--bui-space-6);
+  outline: none;
+  display: flex;
+}
+
+.bui-MenuItemListBox {
+  padding-inline: var(--bui-space-1);
+  display: block;
+
+  &:hover .bui-MenuItemWrapper {
+    background: var(--bui-bg-surface-2);
+    color: var(--bui-fg-primary);
+  }
+
+  &[data-selected] .bui-MenuItemListBoxCheck {
+    & > svg {
+      opacity: 1;
+      color: var(--bui-fg-primary);
+    }
+  }
+}
+
+.bui-MenuItemListBoxCheck {
+  justify-content: center;
+  align-items: center;
+  width: 1rem;
+  height: 1rem;
+  display: flex;
+
+  & > svg {
+    opacity: 0;
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+.bui-MenuItemContent {
+  align-items: center;
+  gap: var(--bui-space-2);
+  display: flex;
+
+  & > svg {
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+.bui-MenuItemArrow {
+  width: 1rem;
+  height: 1rem;
+  display: none;
+
+  & > svg {
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+.bui-MenuSection {
+  &:first-child .bui-MenuSectionHeader {
+    padding-top: 0;
+  }
+}
+
+.bui-MenuSectionHeader {
+  height: 2rem;
+  padding-top: var(--bui-space-3);
+  padding-left: var(--bui-space-2);
+  color: var(--bui-fg-primary);
+  font-size: var(--bui-font-size-1);
+  letter-spacing: .05rem;
+  text-transform: uppercase;
+  align-items: center;
+  font-weight: bold;
+  display: flex;
+}
+
+.bui-MenuSeparator {
+  background: var(--bui-border);
+  height: 1px;
+  margin-inline: var(--bui-space-1_5);
+  margin-block: var(--bui-space-1);
+}
+
+.bui-MenuSearchField {
+  font-family: var(--bui-font-regular);
+  flex-shrink: 0;
+  width: 100%;
+  position: relative;
+
+  &[data-empty] {
+    & .bui-MenuSearchFieldClear {
+      display: none;
+    }
+  }
+}
+
+.bui-MenuSearchFieldInput {
+  padding: 0 var(--bui-space-3);
+  border: none;
+  border-bottom: 1px solid var(--bui-border);
+  background-color: var(--bui-bg-surface-1);
+  font-size: var(--bui-font-size-3);
+  font-family: var(--bui-font-regular);
+  font-weight: var(--bui-font-weight-regular);
+  color: var(--bui-fg-primary);
+  width: 100%;
+  height: 2rem;
+  cursor: inherit;
+  outline: none;
+  align-items: center;
+  display: flex;
+
+  &::-webkit-search-cancel-button, &::-webkit-search-decoration {
+    -webkit-appearance: none;
+  }
+}
+
+.bui-MenuSearchFieldClear {
+  right: var(--bui-space-2);
+  cursor: pointer;
+  color: var(--bui-fg-secondary);
+  background-color: #0000;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  transition: color .2s ease-in-out;
+  display: flex;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+
+  & > svg {
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+.bui-MenuEmptyState {
+  padding-inline: var(--bui-space-3);
+  padding-block: var(--bui-space-2);
+  color: var(--bui-fg-secondary);
+  font-size: var(--bui-font-size-3);
+  font-family: var(--bui-font-regular);
+  font-weight: var(--bui-font-weight-regular);
+}
