--- a/packages/ui/src/components/Table/Table.module.css
+++ b/packages/ui/src/components/Table/Table.module.css
@@ -21,7 +21,6 @@
     width: 100%;
     caption-side: bottom;
     border-collapse: collapse;
-    table-layout: fixed;
   }
 
   .bui-TableHeader {
@@ -110,10 +109,6 @@
   .bui-TableCell {
     padding: var(--bui-space-3);
     font-size: var(--bui-font-size-3);
-    font-family: var(--bui-font-regular);
-    font-weight: var(--bui-font-weight-regular);
-    min-width: 0;
-    overflow: hidden;
   }
 
   .bui-TableCellSelection {
@@ -121,13 +116,10 @@
   }
 
   .bui-TableCellContentWrapper {
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
     align-items: center;
     gap: var(--bui-space-2);
-    min-width: 0;
-    width: 100%;
-    max-width: 100%;
   }
 
   .bui-TableCellIcon,
@@ -141,15 +133,6 @@
     display: flex;
     flex-direction: column;
     gap: var(--bui-space-0_5);
-    min-width: 0;
-    flex: 1;
-    overflow: hidden;
-    max-width: 100%;
-  }
-
-  .bui-TableCellContent > * {
-    min-width: 0;
-    max-width: 100%;
   }
 
   .bui-TableCellProfile {
